--- a/package.json
+++ b/package.json
@@ -1,64 +1,98 @@
 {
   "name": "quotedapp",
   "version": "1.0.0",
-  "description": "Quoted is a file type/reader that allows for sandboxed, more secure reading.",
+  "sideEffects": false,
+  "description": "Quoted official app",
+  "keywords": [
+    "web-browser",
+    "material",
+    "electron",
+    "react",
+    "mobx",
+    "styled-components"
+  ],
+  "homepage": "https://github.com/quotednote/quotedapp#readme",
   "main": "main.js",
+  "author": "N3k0 + Quoted Community <bcamarata0@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/quotednote/quotedapp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/quotednote/quotedapp/issues"
+  },
   "scripts": {
-    "start": "electron .",
-    "win-build": "electron-builder -w",
+   "win-build": "electron-builder -w",
     "lin-build": "electron-builder -l",
     "mac-build": "electron-builder -m"
   },
-  "build": {
+   "build": {
     "appId": "me.neko.quotedapp",
-    "productName": "Quoted",
-    "win": {
-    "target": [
-      {
-        "target": "nsis",
-        "arch": ["x64", "ia32"],
-        "oneClick": false
-      }
-    ]
-  },
-    "fileAssociations": [
-    {
-      "name": "Quoted Page",
-      "description": "Quoted App",
-      "role": "Viewer",
-      "ext": "html"
-    },
-      {
-      "name": "Quoted Page",
-      "description": "Quoted App",
-      "role": "Viewer",
-      "ext": "qtxt"
-    },
-       {
-      "name": "Quoted Page",
-      "description": "Quoted App",
-      "role": "Viewer",
-      "ext": "quo"
-    },
-      {
-      "name": "Quoted Page",
-      "description": "Quoted App",
-      "role": "Viewer",
-      "ext": "qhtml"
-  }
- ]
-  "repository": "https://github.com/quotednote/quotedapp",
-  "keywords": [
-    "Quoted",
-    "quick",
-    "start",
-    "ez",
-    "app"
-  ],
-  "author": "Quoted Project - Published by N3k0 <2qb@kittymail.com>",
-  "license": "CC0-1.0",
+    "productName": "Quoted"
+   }
   "devDependencies": {
-    "electron": "^11.2.3",
-    "electron-builder": "22.9.1"
-  }
+    "@cliqz/adblocker-electron": "^1.16.0",
+    "@types/animejs": "^3.1.1",
+    "@types/chrome": "0.0.116",
+    "@types/crypto-js": "^3.1.47",
+    "@types/extract-zip": "^1.6.2",
+    "@types/gsap": "1.20.2",
+    "@types/jszip": "^3.4.1",
+    "@types/nedb": "1.8.9",
+    "@types/node": "14.0.13",
+    "@types/node-fetch": "^2.5.7",
+    "@types/react": "16.9.38",
+    "@types/react-dom": "16.9.8",
+    "@types/styled-components": "5.1.0",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
+    "animejs": "^3.2.0",
+    "awesome-node-loader": "^1.1.1",
+    "axios": "0.21.1",
+    "cache-loader": "^4.1.0",
+    "concurrently": "^5.2.0",
+    "copy-webpack-plugin": "^6.0.2",
+    "cross-env": "7.0.2",
+    "crypto-js": "^4.0.0",
+    "electron": "9.3.1",
+    "electron-builder": "22.7.0",
+    "electron-extensions": "^7.0.0-beta.3",
+    "electron-updater": "4.3.1",
+    "eslint": "^7.3.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.0",
+    "extract-zip": "^2.0.1",
+    "file-loader": "^6.0.0",
+    "file-type": "14.6.2",
+    "fork-ts-checker-webpack-plugin": "^5.0.4",
+    "hard-source-webpack-plugin": "^0.13.1",
+    "html-webpack-plugin": "^4.3.0",
+    "icojs": "^0.14.0",
+    "jszip": "^3.5.0",
+    "mobx": "5.15.4",
+    "mobx-react-lite": "2.0.7",
+    "nedb": "1.8.0",
+    "node-bookmarks-parser": "^2.0.0",
+    "node-fetch": "^2.6.1",
+    "prettier": "2.0.5",
+    "pretty-bytes": "5.3.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-hot-loader": "4.12.21",
+    "react-windows-controls": "1.1.1",
+    "source-map-support": "^0.5.19",
+    "styled-components": "^5.1.1",
+    "terser": "^4.8.0",
+    "terser-webpack-plugin": "^3.0.6",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.5",
+    "typescript-plugin-styled-components": "^1.4.4",
+    "webpack": "4.43.0",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2"
+  },
+  "dependencies": {}
 }
