--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
    },
   "devDependencies": {
     "electron": "9.3.1",
-    "electron-builder": "22.7.0"
+    "electron-builder": "22.7.0",
+    "discord-rich-presence": "^0.0.6",
+    "jquery": "^3.3.1"
   },
   "dependencies": {}
 }
